--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,22 @@
 	
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="D:\Play\framework\play-1.2.5.3.jar" sourcepath="D:/play/framework/src" />
+	<classpathentry kind="lib" path="D:\GitHub\MarPeruano\lib\hamcrest-core-1.1.jar"/>
+	<classpathentry kind="lib" path="D:\GitHub\MarPeruano\lib\httpclient-4.3.4.jar"/>
+	<classpathentry kind="lib" path="D:\GitHub\MarPeruano\lib\httpclient-4.5.2.jar"/>
+	<classpathentry kind="lib" path="D:\GitHub\MarPeruano\lib\httpcore-4.3.2.jar"/>
+	<classpathentry kind="lib" path="D:\GitHub\MarPeruano\lib\httpcore-4.4.4.jar"/>
+	<classpathentry kind="lib" path="D:\GitHub\MarPeruano\lib\httpmime-4.3.4.jar"/>
+	<classpathentry kind="lib" path="D:\GitHub\MarPeruano\lib\jackson-annotations-2.5.3.jar"/>
+	<classpathentry kind="lib" path="D:\GitHub\MarPeruano\lib\jackson-core-2.5.3.jar"/>
+	<classpathentry kind="lib" path="D:\GitHub\MarPeruano\lib\jackson-databind-2.5.3.jar"/>
+	<classpathentry kind="lib" path="D:\GitHub\MarPeruano\lib\java-http-client-2.3.1.jar"/>
+	<classpathentry kind="lib" path="D:\GitHub\MarPeruano\lib\json-20140107.jar"/>
+	<classpathentry kind="lib" path="D:\GitHub\MarPeruano\lib\mockito-core-1.10.19.jar"/>
+	<classpathentry kind="lib" path="D:\GitHub\MarPeruano\lib\objenesis-2.1.jar"/>
+	<classpathentry kind="lib" path="D:\GitHub\MarPeruano\lib\sendgrid-java-1.2.0.jar" sourcepath="C:\Users\Alejandro\.ivy2\cache\com.sendgrid\sendgrid-java\sources\sendgrid-java-1.2.0-sources.jar"/>
+	<classpathentry kind="lib" path="D:\GitHub\MarPeruano\lib\sendgrid-java-3.0.0.jar" sourcepath="C:\Users\Alejandro\.ivy2\cache\com.sendgrid\sendgrid-java\sources\sendgrid-java-3.0.0-sources.jar"/>
+	<classpathentry kind="lib" path="D:\GitHub\MarPeruano\lib\smtpapi-java-0.1.1.jar"/>
 	<classpathentry kind="lib" path="D:\Play\framework\lib\activation-1.1.1.jar"/>
 	<classpathentry kind="lib" path="D:\Play\framework\lib\antlr-2.7.7.jar"/>
 	<classpathentry kind="lib" path="D:\Play\framework\lib\asm-all-3.3.1.jar"/>
